more css changes

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             <div class="parameter-container">
               <!-- card-1  -->
               <div class="parameter card">
-                <img src="./img/windspeed.jpg" class="windspeed" width="80px" />
+                <img src="./img/windspeed.jpg" class="imgWidth windspeed" />
                 <p>Wind Speed</p>
                 <p data-windspeed></p>
               </div>
               <!-- card-2  -->
               <div class="parameter card">
-                <img src="./img/Humidity-icon.png" width="80px" />
+                <img src="./img/Humidity-icon.png" class="imgWidth" />
                 <p>Humidity</p>
                 <p data-humidity></p>
               </div>
               <!-- card-3  -->
               <div class="parameter card">
-                <img src="./img/clouds.png" width="80px" />
+                <img src="./img/clouds.png" class="imgWidth" />
                 <p>Clouds</p>
                 <p data-cloud></p>
               </div>
